# langchain-RAG-test

./: .env.example  .gitignore  LICENSE  README.md  STATUS.md  docker-compose.yml  opencode.json  pyproject.toml
.opencode/skills/commit/: SKILL.md
.opencode/skills/security-audit/: SKILL.md
projects/rag-mcp/: Dockerfile  pyproject.toml
projects/rag-mcp/data/: .gitkeep
projects/rag-mcp/evaluation/: generate_testset.py  run_eval.py
projects/rag-mcp/evaluation/reports/: .gitkeep
projects/rag-mcp/src/rag_mcp/: chunking.py  config.py  embeddings.py  ingest.py  llm.py  retrieval.py  server.py
projects/rag-mcp/tests/: __init__.py  test_smoke.py
projects/telemetry-mcp/: Dockerfile  pyproject.toml
projects/telemetry-mcp/agent/: __init__.py  graph.py  mcp_client.py  nodes.py
projects/telemetry-mcp/src/telemetry_mcp/: __init__.py  models.py  safety.py  scenarios.py  server.py  simulator.py
projects/telemetry-mcp/tests/: __init__.py  test_safety.py  test_server.py  test_simulator.py  test_smoke.py
