[project]
name = "langchain-rag-test"
version = "0.1.0"
description = "uv workspace root for telemetry-mcp and rag-mcp"
requires-python = ">=3.11"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["projects/telemetry-mcp", "projects/rag-mcp", "packages/*"]

[dependency-groups]
dev = [
    "ruff==0.15.21",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "mypy==2.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["projects"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
