[project]
name = "langchain-rag-test"
version = "0.1.0"
description = "uv workspace root for telemetry-mcp and rag-mcp"
requires-python = ">=3.11"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["projects/telemetry-mcp", "projects/rag-mcp", "packages/*"]

[dependency-groups]
dev = [
    "ruff==0.15.21",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.0.0",
    "mypy==2.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["projects"]
asyncio_mode = "auto"
# Use importlib import mode so multiple project test dirs can share the same
# basename (e.g. tests/test_smoke.py) without colliding on package identity.
addopts = "--import-mode=importlib"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
# Exclude per-project tests/ dirs from the broad `mypy .` run: both projects
# ship tests/__init__.py (per M0.2/M0.3), which mypy maps to a duplicate module
# named "tests". pytest avoids the same collision via --import-mode=importlib
# above. Test files are type-checked per-project as they grow real type surface.
exclude = ['projects/.*/tests/']
